--- a/dashboad.html
+++ b/dashboad.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <div class="resume">
-            <div>
+            <div class="entradas"> 
                 Entradas: R$
                 <span id="incomes" class="incomes">0,00</span>
             </div>
-            <div>
+            <div class="saidas">
                 Saidas: R$
                 <span id="expenses" class="expenses">0,00</span>
             </div>
-            <div>
+            <div class="total">
                 Total: R$
                 <span id="total" class="Total">0,00</span>
              </div>
