--- a/dashboad.html
+++ b/dashboad.html
@@ -1,80 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Despenças</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="./dash.css" rel="stylesheet">
 
 </head>
+
 <body>
-    <!-- Barra Lateral -->
-    <div class="sidebar">
-        <h2>Controle de Despenças</h2>
-        <a href="./dashboard.html">Dashboard</a>
-        <a href="./estatiticas.html">Estatísticas</a>
-        <a href="./relatorios.html">Relatórios</a>
-        <a href="./configuracoes.html">Configurações</a>
-        <a href="#" onclick="sair()">Sair</a>
+    <div id="imagemf">
+        <!-- Barra Lateral -->
+         <div class="row">
+            <div class="col-md-3">
+                <div class="sidebar">
+                    <h2 style="text-align: center">Controle de Despenças</h2>
+                    <a href="./dashboard.html">Dashboard</a>
+                    <a href="./estatiticas.html">Estatísticas</a>
+                    <a href="./relatorios.html">Relatórios</a>
+                    <a href="./configuracoes.html">Configurações</a>
+                    <a href="#" onclick="sair()">Sair</a>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <main>
+                    <!-- Área de Conteúdo Principal -->
+                    <div class="main-content">
+                        <div class="header">
+                            <h1 style="text-align: center;">Bem-vindo(a)</h1>
+                        </div>
+                        <div class="resume">
+                            <div class="entradas">
+                                Entradas: R$
+                                <span id="incomes" class="incomes">0,00</span>
+                            </div>
+                            <div class="saidas">
+                                Saidas: R$
+                                <span id="expenses" class="expenses">0,00</span>
+                            </div>
+                            <div class="total">
+                                Total: R$
+                                <span id="total" class="Total">0,00</span>
+                            </div>
+                        </div>
+                        <div class="login-container">
+                            <form id="formulario" method="post" onsubmit="return incluir(event)">
+                                <div class="newItem">
+                                    <div class="divDesc">
+                                        <label for="desc">Descrição</label>
+                                        <input type="text" id="desc" />
+                                    </div>
+                                    <div class="divAmount">
+                                        <label for="amount">Valor</label>
+                                        <input type="number" id="amount" required />
+                                    </div>
+                                    <div class="divType">
+                                        <label for="type">Tipo</label>
+                                        <select id="type" required>
+                                            <option value="">Selecione</option>
+                                            <option value="entrada">Entrada</option>
+                                            <option value="saida">Saída</option>
+                                        </select>
+                                    </div>
+                                    <button id="botonNew" type="submit">Incluir</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="divTable">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Descrição</th>
+                                        <th class="columnAmount">Valor</th>
+                                        <th class="columnType">Tipo</th>
+                                        <th class="columnAction"></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="bodytable">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </main>
+            </div>
+         </div>
     </div>
-    <main>
-        <!-- Área de Conteúdo Principal -->
-    <div class="main-content">
-        <div class="header">
-            <h1>Bem-vindo(a)</h1>
-        </div>
-        <div class="resume">
-            <div class="entradas"> 
-                Entradas: R$
-                <span id="incomes" class="incomes">0,00</span>
-            </div>
-            <div class="saidas">
-                Saidas: R$
-                <span id="expenses" class="expenses">0,00</span>
-            </div>
-            <div class="total">
-                Total: R$
-                <span id="total" class="Total">0,00</span>
-             </div>
-        </div> 
-        <div class="login-container">
-        <form id="formulario" method="post" onsubmit="return incluir(event)">
-            <div class="newItem">
-                <div class="divDesc">
-                    <label for="desc">Descrição</label>
-                    <input type="text" id="desc" />
-                </div>
-                <div class="divAmount">
-                    <label for="amount">Valor</label>
-                    <input type="number" id="amount" required/>
-                </div>
-                <div class="divType">
-                    <label for="type">Tipo</label>
-                    <select id="type" required>
-                        <option value="">Selecione</option>
-                        <option value="entrada">Entrada</option>
-                        <option value="saida">Saída</option>
-                    </select>
-                </div>
-                <button id="botonNew" type="submit" >Incluir</button>
-            </div>
-        </div>
-        </form>
-        <div class="divTable">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Descrição</th>
-                        <th class="columnAmount">Valor</th>
-                        <th class="columnType">Tipo</th>
-                        <th class="columnAction"></th>
-                    </tr>
-                </thead>
-                <tbody id="bodytable">
-                </tbody>
-            </table>
-        </div>
-    </main>
-       <script src="./script.js"></script>
+    <!-- <div calss ="image">Control de Despensas</div> -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
