--- a/relatorios.html
+++ b/relatorios.html
@@ -30,13 +30,13 @@
                     <!-- Área de Conteúdo Principal -->
                     <div class="main-content">
                         <div class="header">
-                            <h1 style="text-align: center;">RTELATORIO</h1>
+                            <h1 style="text-align: center;">RELATORIO</h1>
                         </div>
                         <div class="divTable">
                             <table>
                                 <thead>
                                     <tr>
-                                        <th colspan="4" class="columnAction"></th>
+                                        <th colspan="5" class="columnAction"></th>                                        
                                     </tr>
                                 </thead>
                                 <tbody id="bodytable">
