--- a/cadastro.html
+++ b/cadastro.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Login</title>
+        <title>Cadastro</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="cadastr.css">
       
     
     </head>
@@ -13,23 +13,23 @@
         <div id="imagemf">
             <div class="Container">
                 <div class="Formulario">
-                    <form id="meuFormulario" method="post" onsubmit="return login(event)">
+                    <form id="meuCadastro" method="post" onsubmit="return login(event)">
                         <fieldset >
-                            <legend>Login</legend>
+                            <legend>Cadastrar</legend>
                             <div class="mb-3">
-                                <label for="usuario" class="form-label">Usuário</label>
+                                <label for="usuario" class="form-label">Nome</label>
                                 <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Digite seu nome">
                             </div>
                             <div class="mb-3">
-                                <label for="senha" class="form-label">Password</label>
+                                <label for="password" class="form-label">Senha</label>
                                 <input type="password" id="senha" name="senha" class="form-control" placeholder="Digite sua senha">                       
-                            </div>                        
-                            <button type="submit" class="btn btn-primary">Entrar</button>
-                            <div>
-                                <hr>
                             </div>
-                            <p> Não tem uma conta?
-                                <a href="cadrastro.html"> Cadastre-se</a>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Confirmar Senha</label>
+                                <input type="password" id="confirmSenha" name="senha" class="form-control" placeholder="Digite novamente sua senha">                       
+                            </div>                    
+                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <div>
                         </fieldset>  
                     </form>
                 </div>
