--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <hr>
                             </div>
                             <p> Não tem uma conta?
-                                <a href="cadrastro.html"> Cadastre-se</a>
+                                <a href="file:///C:/Users/usuario/Documents/jp-tcc-controledespesas-03-front/cadastro.html"> Cadastre-se</a>
                         </fieldset>  
                     </form>
                 </div>
