--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                         <fieldset >
                             <legend>Login</legend>
                             <div class="mb-3">
-                                <label for="usuario" class="form-label">Usuário</label>
+                                <label id= "labelUsuario" for="usuario" class="form-label">Usuário</label>
                                 <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Digite seu nome">
                             </div>
                             <div class="mb-3">
-                                <label for="senha" class="form-label">Password</label>
+                                <label id= "labelsenha" for="senha" class="form-label">Password</label>
                                 <input type="password" id="senha" name="senha" class="form-control" placeholder="Digite sua senha">                       
                             </div>                        
                             <button type="submit" class="btn btn-primary">Entrar</button>
