--- a/dashboad.html
+++ b/dashboad.html
@@ -18,7 +18,7 @@
             <div class="col-md-3">
                 <div class="sidebar">
                     <h2 style="text-align: center">Controle de Despenças</h2>
-                    <a href="./dashboard.html">Dashboard</a>
+                    <a href="./dashboad.html">Dashboard</a>
                     <a href="./relatorios.html">Relatórios</a>
                     <a href="./estatiticas.html">Estatísticas</a>
                     <a href="./configuracoes.html">Configurações</a>
@@ -95,7 +95,7 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
 
-    <script src="./script.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
