--- a/estatiticas.html
+++ b/estatiticas.html
@@ -7,12 +7,13 @@
     <title>Controle de Despenças</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="./relatorios.css" rel="stylesheet" />
+    <link href="./estatiticas.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <div id="imagemf">
+        <div id="imagemconstrucao">
         <!-- Barra Lateral -->
          <div class="row">
             <div class="col-md-3">
@@ -30,23 +31,14 @@
                     <!-- Área de Conteúdo Principal -->
                     <div class="main-content">
                         <div class="header">
-                            <h1 style="text-align: center;">RELATÓRIOS</h1>
+                            <h1 style="position: 5px 0 0 0;">DESCULPE!</h1>
+                            <h2 style="text-align: center;">Esta pagina foi hospedada, mas ainda está em desemvolvimento.
+                                Volte em breve!</h2>
                         </div>
-                        <div class="divTable">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th colspan="5" class="columnAction"></th>                                        
-                                    </tr>
-                                </thead>
-                                <tbody id="bodytable">
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
                 </main>
             </div>
          </div>
+        </div>
     </div>
     <!-- <div calss ="image">Control de Despensas</div> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
