--- a/relatorios.html
+++ b/relatorios.html
@@ -7,31 +7,118 @@
     <title>Controle de Despenças</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="./relatorios.css" rel="stylesheet" />
+    <style>
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            background: linear-gradient(50deg, #f8ffc8, #f1b1f1);
+            background-repeat: no-repeat;
+        }
 
+        .sidebar {
+            height: 100vh;
+            background-color: #bcdaf8;
+            color: #000;
+        }
+
+        .sidebar a {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        .sidebar a:hover {
+            background-color: #bcdaf8;
+        }
+
+        .imagemf {
+            background-image: url('./graficdash.png');
+            background-position: right bottom;
+            background-repeat: no-repeat;
+            background-size: 45%;
+            width: 100%;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        .divTable {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+            padding: 20px;
+            width: 100%;
+            display: inline-block;
+            vertical-align: top;
+        }
+
+        .columnAmount,
+        .columnType {
+            text-align: right;
+        }
+
+        #bodytable {
+            padding: 100%;
+        }
+
+        #formulario {
+            max-width: 450px;
+            margin: auto;
+        }
+
+        #botonNew {
+            width: 100%;
+            
+        }
+
+        .direita {
+            text-align: left;
+        }
+
+        .esquerda {
+            text-align: right;
+        }
+
+        desc {
+            text-align: right;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="imagemf">
-        <!-- Barra Lateral -->
-         <div class="row">
-            <div class="col-md-3">
-                <div class="sidebar">
-                    <h2 style="text-align: center">Controle de Despenças</h2>
-                    <a href="./dashboad.html">Inicio</a>
-                    <a href="./relatorios.html">Relatórios</a>
-                    <a href="./estatiticas.html">Estatísticas</a>
-                    <a href="./configuracoes.html">Configurações</a>
-                    <a href="#" onclick="sair()">Sair</a>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <main>
-                    <!-- Área de Conteúdo Principal -->
-                    <div class="main-content">
-                        <div class="header">
-                            <h1 style="text-align: center;">RELATÓRIOS</h1>
-                        </div>
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <nav id="sidebar" class="sidebar d-none d-md-block col-md-3 col-lg-2 p-3">
+            <h5>Controle de Despenças</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="./dashboad.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./relatorios.html">Relatórios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./estatiticas.html">Estatísticas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./configuracoes.html">Configurações</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="sair()">Sair</a>
+                </li>
+            </ul>
+        </nav>
+
+ <!-- Main content -->
+  <main class="flex-grow-1 p-4 imagemf">
+    <div class="container">
+        <div class="header">
+            <h1 style="text-align: center;">RELATÓRIOS</h1>
+        </div>
+        <div class="row">
+                            <div class="col-md-9">
                         <div class="divTable">
                             <table>
                                 <thead>
@@ -39,24 +126,59 @@
                                         <th colspan="5" class="columnAction"></th>                                        
                                     </tr>
                                 </thead>
-                                <tbody id="bodytable">
+                                <tbody id="bodyTable">
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                </main>
+                </div>
             </div>
-         </div>
+        </main>
+
+        <!-- Toggle Button for Sidebar (visible only on small screens) -->
+        <button class="btn btn-primary d-md-none" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+            ☰ Menu
+        </button>
+
+        <!-- Offcanvas Sidebar -->
+        <div class="offcanvas offcanvas-start d-md-none" tabindex="-1" id="offcanvasSidebar"
+            aria-labelledby="offcanvasSidebarLabel">
+            <div class="offcanvas-header">
+                <h5 id="offcanvasSidebarLabel">Controle de Despenças</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./dashboad.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./relatorios.html">Relatórios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./estatiticas.html">Estatísticas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./configuracoes.html">Configurações</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="sair()">Sair</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <!-- <div calss ="image">Control de Despensas</div> -->
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-
-    <script src="./script.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
+
+                        
